src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

:root {
  --ifm-color-primary: #18181b;
  --ifm-color-primary-dark: #0e60b2;
  --ifm-color-primary-darker: #093d71;
  --ifm-color-primary-darkest: #041a31;
  --ifm-color-primary-light: #3e97ef;
  --ifm-color-primary-lighter: #84bdf5;
  --ifm-color-primary-lightest: #cae3fb;
  --ifm-code-font-size: 95%;
  --doc-sidebar-width: 275px !important;
  --ifm-link-hover-decoration: none;
  --ifm-link-hover-color: inherit;
}

html[data-theme="dark"] {
  --ifm-link-color: var(--ifm-color-primary-lighter);
  --ifm-menu-color-active: var(--ifm-color-primary-lighter);
  --ifm-navbar-link-hover-color: var(--ifm-color-primary-lighter);
  --ifm-toc-link-color: var(--ifm-color-primary-lighter);
  --ifm-blockquote-color: #eeeeee;
  /* --ifm-code-background: var(--ifm-color-primary-dark); */
  --ifm-color: #ffffff;
  --ifm-background-color: #141414;
  --ifm-footer-background-color: #000;
  --ifm-card-background-color: #1a1a1a;
  --collapse-button-bg-color-dark: transparent;
  --ifm-badge-background-color: #b2e7ea;
  --ifm-badge-background-color: hsl(210deg, 15%, 20%);
  --card-color: rgba(17, 24, 39);
}

html[data-theme="light"] {
  --ifm-link-color: var(--ifm-color-primary-light);
  --ifm-menu-color-active: var(--ifm-color-primary-light);
  --ifm-navbar-link-hover-color: var(--ifm-color-primary-light);
  --ifm-toc-link-color: var(--ifm-color-primary-light);
  --ifm-blockquote-color: #000000;
  --ifm-color-emphasis-300: #505050;

  /* --ifm-code-background: var(--ifm-color-primary-lightest); */
  --ifm-color-input-background: #ffffff;
  --ifm-color: #141414;
  --ifm-background-color: rgb(249, 250, 251);
  --ifm-footer-background-color: #ffffff;
  --ifm-card-background-color: #ffffff;
  --ifm-badge-background-color: rgba(239, 246, 255);

  --card-color: rgba(239, 246, 255);
}

/* If we scope things with .intro we can attach to the tailwind styles on only the intro page */
.tailwindcss .flex {
  display: flex;
}
.tailwindcss .flex-col {
  flex-direction: column;
}

.tailwindcss .gap-6 {
  gap: 1.5rem;
}
.tailwindcss ul {
  list-style: none;
  padding: 0;
}
.tailwindcss .pl-4 {
  padding-left: 1rem;
}
main.p-6,
.tailwindcss.p-6,
.tailwindcss .p-6 {
  padding: 1.5rem;
}

.tailwindcss .grid {
  display: grid;
}
.tailwindcss .grid-cols-1 {
  grid-template-columns: repeat(1, minmax(0, 1fr));
}
.tailwindcss .grid-cols-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}
.tailwindcss .gap-6 {
  gap: 1.5rem;
}
.tailwindcss .lg\:gap-8 {
  gap: 2rem;
}
.tailwindcss .list-disc {
  list-style-type: disc;
}
.tailwindcss .hover\:underline:hover {
  text-decoration: underline;
}
.tailwindcss .bg-\[color\:var\(--ifm-color\)\] {
  background-color: var(--ifm-color);
}
.tailwindcss .text-\[color\:var\(--ifm-background-color\)\] {
  color: var(--ifm-background-color);
}
.tailwindcss .p-2 {
  padding: 0.5rem;
}
.tailwindcss .rounded-lg {
  border-radius: 0.5rem;
}
.tailwindcss .mb-4 {
  margin-bottom: 1rem;
}
.tailwindcss .mb-8 {
  margin-bottom: 2rem;
}
.tailwindcss .my-20 {
  margin-bottom: 5rem;
  margin-top: 5rem;
}
.tailwindcss .my-10 {
  margin-bottom: 2.5rem;
  margin-top: 2.5rem;
}
.tailwindcss .h-10 {
  height: 2.5rem;
}
.tailwindcss .w-10 {
  width: 2.5rem;
}
.tailwindcss .h-16 {
  height: 4rem;
}
.tailwindcss .w-16 {
  width: 4rem;
}

.tailwindcss .h-8 {
  height: 2rem;
}
.tailwindcss .w-8 {
  width: 2rem;
}

.tailwindcss .h-7 {
  height: 1.75rem;
}
.tailwindcss .w-7 {
  width: 1.75rem;
}

.tailwindcss .pl-1 {
  padding-left: 0.25rem;
}

.tailwindcss .justify-center {
  justify-content: center;
}
.tailwindcss .items-center {
  align-items: center;
}
.tailwindcss .text-center {
  text-align: center;
}

.tailwindcss .bg-\[color\:var\(--ifm-card-background-color\)\] {
  background-color: var(--ifm-card-background-color);
}
.tailwindcss .shadow-lg {
  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
    0 4px 6px -4px rgba(0, 0, 0, 0.1);
  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
    0 4px 6px -4px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}
.tailwindcss .space-x-3 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-left: calc(0.75rem * (1 - var(--tw-space-x-reverse)));
  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
}
.tailwindcss .space-x-4 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-left: calc(1rem * (1 - var(--tw-space-x-reverse)));
  margin-right: calc(1rem * var(--tw-space-x-reverse));
}
.tailwindcss .space-y-3 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
  margin-top: calc(0.75rem * (1 - var(--tw-space-y-reverse)));
}
.tailwindcss p {
  margin: 0;
}

main.max-w-screen-lg {
  max-width: 1024px;
  margin: auto;
}
.tailwindcss.max-w-screen-lg {
  max-width: 1024px;
}
.tailwindcss.mx-auto {
  margin: auto;
}
.tailwindcss .text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}
.tailwindcss .text-3xl {
  font-size: 1.875rem;
  line-height: 2.25rem;
}
.tailwindcss .text-5xl {
  font-size: 3rem;
  line-height: 1;
}
@media (min-width: 768px) {
  .tailwindcss .md\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
  main.md\:p-10,
  .tailwindcss .md\:p-10,
  .tailwindcss.md\:p-10 {
    padding: 2.5rem;
  }
  .tailwindcss .md\:text-4xl {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }
}

.navbar__logo img {
  height: 35px;
}

.landing-card {
  border-radius: 0.5rem;
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),
    0 1px 2px -1px var(--tw-shadow-color);
  background-color: var(--ifm-card-background-color);
  padding: 1.25rem;
}
/* End Crazy Tailwind hax */

@font-face {
  font-family: "Aeonik";
  src: url("../fonts/Aeonik-Regular.woff");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Aeonik-Bold";
  src: url("../fonts/Aeonik-Bold.woff");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Aeonik-Light";
  src: url("../fonts/Aeonik-Light.woff");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

/* Leadership page css */

.leadership-container {
  max-width: 800px;
  margin: auto;
  padding: 15px;
  text-align: center;
}
.leadership-name {
  font-size: 1.2em;
  font-weight: 500;
}
.leadership-image {
  max-width: 150px;
}
.leadership-list {
  list-style-type: none;
}
.leadership-list-item {
  margin-top: 15px;
  padding-top: 15px;
  padding-bottom: 15px;
}
.menu__link, .navbar__link, .dropdown__link{
    font-weight: 400;
}

